hphp/hack/test/typecheck/array_heterogeneous.php.exp
File "array_heterogeneous.php", line 20, characters 3-14:
This is not an object of type KeyedContainer, this is an int (Typing[4005])
File "array_heterogeneous.php", line 18, characters 16-16:
Definition is here
